configurado para iceberg e delta

--- a/spark-conf/spark-defaults.conf
+++ b/spark-conf/spark-defaults.conf
@@ -1,29 +1,53 @@
-#Spark jars
+# Master
+spark.master yarn
+
+# ------------------------------------------------------------------
+# JARs locais (Hadoop AWS + Iceberg runtime)
+# ------------------------------------------------------------------
 spark.jars /opt/spark/jars-extra/hadoop-aws-3.3.6.jar,/opt/spark/jars-extra/aws-java-sdk-bundle-1.12.262.jar,/opt/spark/jars-extra/iceberg-spark-runtime-3.5_2.12-1.5.0.jar
 
+# ------------------------------------------------------------------
+# Delta Lake vía Maven (bundle completo: inclúe delta-storage)
+# ------------------------------------------------------------------
+spark.jars.packages io.delta:delta-spark_2.12:3.1.0
+
+# ------------------------------------------------------------------
 # Event logs para o History (en HDFS)
+# ------------------------------------------------------------------
 spark.eventLog.enabled true
 spark.eventLog.dir hdfs://namenode:9000/spark-logs
 spark.history.fs.logDirectory hdfs://namenode:9000/spark-logs
 spark.history.fs.update.interval 10s
 
+# ------------------------------------------------------------------
 # S3A / MinIO
+# ------------------------------------------------------------------
 spark.hadoop.fs.s3a.endpoint              http://minio:9000
 spark.hadoop.fs.s3a.access.key            minioadmin
 spark.hadoop.fs.s3a.secret.key            minioadmin
 spark.hadoop.fs.s3a.path.style.access     true
 spark.hadoop.fs.s3a.connection.ssl.enabled false
 spark.hadoop.fs.s3a.impl                  org.apache.hadoop.fs.s3a.S3AFileSystem
+spark.hadoop.fs.s3a.aws.credentials.provider org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
 
-# Extensións de Iceberg
-spark.sql.extensions org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
+# ------------------------------------------------------------------
+# Extensións de Delta e Iceberg
+# ------------------------------------------------------------------
+spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension,org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
 
-# Catálogo "local" sobre HDFS (modo Hadoop catalog)
+# Delta no catálogo por defecto (spark_catalog)
+spark.sql.catalog.spark_catalog org.apache.spark.sql.delta.catalog.DeltaCatalog
+
+# ------------------------------------------------------------------
+# Catálogo "local" sobre HDFS (modo Hadoop catalog, Iceberg)
+# ------------------------------------------------------------------
 spark.sql.catalog.local org.apache.iceberg.spark.SparkCatalog
 spark.sql.catalog.local.type hadoop
 spark.sql.catalog.local.warehouse hdfs://namenode:9000/warehouse/iceberg
 
-## Catálogo "minio" sobre S3A (MinIO)
+# ------------------------------------------------------------------
+# Catálogo "minio" sobre S3A (MinIO, Iceberg)
+# ------------------------------------------------------------------
 spark.sql.catalog.minio org.apache.iceberg.spark.SparkCatalog
 spark.sql.catalog.minio.type hadoop
 spark.sql.catalog.minio.warehouse s3a://spark/iceberg-warehouse
